added the missing entry for snd-seq-dummy module.

--- a/configure.in
+++ b/configure.in
@@ -793,6 +793,7 @@ fi
 AC_SUBST(CONFIG_SND_SEQUENCER)
 if test "$CONFIG_SND_SEQUENCER" = "m"; then
   AC_DEFINE(CONFIG_SND_SEQUENCER)
+  AC_DEFINE(CONFIG_SND_SEQ_DUMMY_MODULE)
   AC_MSG_RESULT(yes)
 else
   AC_MSG_RESULT(no)
