--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -49,6 +49,7 @@ CONFIG_PARISC		= @CONFIG_PARISC@
 CONFIG_X86_PC9800	= @CONFIG_X86_PC9800@
 CONFIG_PCMCIA		= @CONFIG_PCMCIA@
 CONFIG_SND_SEQUENCER	= @CONFIG_SND_SEQUENCER@
+CONFIG_SND_SEQ_DUMMY    = @CONFIG_SND_SEQUENCER@
 CONFIG_SND_OSSEMUL	= @CONFIG_SND_OSSEMUL@
 ifeq (y,$(CONFIG_SND_OSSEMUL))
   CONFIG_SND_MIXER_OSS	= m
