--- a/include/config.h.in
+++ b/include/config.h.in
@@ -25,3 +25,4 @@
 #undef CONFIG_SND_DEBUG_DETECT
 #undef CONFIG_SND_BIT32_EMUL_MODULE
 #undef CONFIG_SND_RTCTIMER_MODULE
+#undef CONFIG_SND_SEQ_DUMMY_MODULE
