Clemens Ladisch <clemens@ladisch.de> This adds support for the mixer and wavetable synthesizer of OPL4 chips.
The OPL4 can be used with OPTi 82C928/Mozart, 82C929 and 82C924 cards
(82C925 and 82C93x have an integrated OPL3 and don't support an external
OPLx chip).

The changes in alsa-kernel/.../opti92x-ad1848.c are protected by the
USE_OPL4 symbol which is defined in alsa-driver/.../opti92x-ad1848.c.

The changes in alsa-kernel/drivers/opl3/*.c involve modifications of the
OPL3's mode register which would clear the NEW2 bit (which enables OPL4
registers). Those register writes had been used to restrict the OPL3 to
OPL2 compatibility, which IMHO isn't necessary, so I removed them. :)

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -5,7 +5,7 @@ include $(TOPDIR)/Makefile.conf
 
 # ALSA extra definitions
 
-extra-subdir-y	:= vx
+extra-subdir-y	:= vx opl4
 extra-subdir-m	:= $(extra-subdir-y)
 
 snd-serialmidi-objs := serialmidi.o
