Added PnP 2.5 compatibility code

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -38,6 +38,7 @@ CONFIG_SND_MVERSION	= @CONFIG_SND_MVERSION@
 CONFIG_PCI		= @CONFIG_PCI@
 CONFIG_ISA		= @CONFIG_ISA@
 CONFIG_ISAPNP_KERNEL	= @CONFIG_ISAPNP_KERNEL@
+CONFIG_PNP_KERNEL	= @CONFIG_PNP_KERNEL@
 CONFIG_ISAPNP		= @CONFIG_ISAPNP@
 CONFIG_SGI		= @CONFIG_SGI@
 CONFIG_L3		= @CONFIG_L3@
