--- a/include/config.h.in
+++ b/include/config.h.in
@@ -7,7 +7,9 @@
 #undef CONFIG_SND_VERSION
 #undef CONFIG_SND_KERNELDIR
 #undef CONFIG_ISAPNP_KERNEL
+#undef CONFIG_PNP_KERNEL
 #undef CONFIG_ISAPNP
+#undef CONFIG_PNP
 #undef CONFIG_SND_ISA
 #undef CONFIG_OLD_KILL_FASYNC
 #undef CONFIG_HAVE_DMA_ADDR_T
