--- a/support/isapnp/Makefile
+++ b/support/isapnp/Makefile
@@ -3,24 +3,21 @@
 # Copyright (c) 2001 by Jaroslav Kysela <perex@suse.cz>
 #
 
-TOPDIR = ..
+TOPDIR = ../..
 
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
 TOPDIR = $(MAINSRCDIR)
 
-subdir-m :=
+export-objs     += isapnp.o
 
+snd-isapnp-objs := isapnp.o isapnp_proc.o isapnp_quirks.o
+
+# Toplevel Module Dependency
 ifndef CONFIG_ISAPNP_KERNEL
 ifeq (y,$(CONFIG_ISAPNP))
-subdir-m += isapnp
-endif
-endif
-
-ifndef CONFIG_PNP_KERNEL
-ifeq (y,$(CONFIG_ISAPNP))
-subdir-m += pnp
+obj-m += snd-isapnp.o
 endif
 endif
 
