Added more new PnP modules: dt019x, azt2320, es968, sb16, sbawe

--- a/isa/sb/Makefile
+++ b/isa/sb/Makefile
@@ -9,6 +9,8 @@ CONFIG_SND_SB16_CSP=y
 
 export-objs  := emu8000.o sb_common.o sb8_main.o sb16_main.o sb16_csp.o
 
+isapnp-files := es968.isapnp sb16.isapnp sbawe.isapnp
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/isa/sb/Makefile
 
