--- a/isa/Makefile
+++ b/isa/Makefile
@@ -18,7 +18,7 @@ extra-subdir-m	:= $(extra-subdir-y)
 snd-sscape-objs := sscape.o
 extra-obj-$(CONFIG_SND_SSCAPE) += snd-sscape.o
 
-isapnp-files := als100.isapnp
+isapnp-files := als100.isapnp azt2320.isapnp dt019x.isapnp
 
 #
 #
