--- a/isa/Makefile
+++ b/isa/Makefile
@@ -18,7 +18,8 @@ extra-subdir-m	:= $(extra-subdir-y)
 snd-sscape-objs := sscape.o
 extra-obj-$(CONFIG_SND_SSCAPE) += snd-sscape.o
 
-isapnp-files := als100.isapnp azt2320.isapnp dt019x.isapnp opl3sa2.isapnp
+isapnp-files := als100.isapnp azt2320.isapnp dt019x.isapnp opl3sa2.isapnp \
+		cmi8330.isapnp es18xx.isapnp
 
 #
 #
