Recoded cs423x and interwave drivers for new PnP layer

--- a/isa/cs423x/Makefile
+++ b/isa/cs423x/Makefile
@@ -9,7 +9,9 @@ snd-pc98-cs4232-objs := pc98.o
 obj-$(CONFIG_SND_PC98_CS4232) += snd-pc98-cs4232.o snd-cs4231-lib.o
 
 export-objs  := cs4231_lib.o cs4236_lib.o
- 
+
+isapnp-files := cs4232.isapnp cs4236.isapnp 
+
 include $(TOPDIR)/alsa-kernel/isa/cs423x/Makefile
 
 include $(TOPDIR)/Rules.make
