--- a/isa/gus/Makefile
+++ b/isa/gus/Makefile
@@ -5,6 +5,8 @@ include $(TOPDIR)/Makefile.conf
 
 export-objs  := gus_main.o gus_volume.o
 
+isapnp-files := interwave.isapnp interwave-stb.isapnp
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/isa/gus/Makefile
 
