Recoded ad1816a and opti drivers to new PnP layer

--- a/isa/ad1816a/Makefile
+++ b/isa/ad1816a/Makefile
@@ -5,6 +5,8 @@ include $(TOPDIR)/Makefile.conf
 
 export-objs  := ad1816a_lib.o
 
+isapnp-files := ad1816a.isapnp
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/isa/ad1816a/Makefile
 
