--- a/isa/opti9xx/Makefile
+++ b/isa/opti9xx/Makefile
@@ -3,6 +3,8 @@ TOPDIR = ../..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+isapnp-files = opti92x-ad1848.isapnp opti92x-cs4231.isapnp opti93x.isapnp
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/isa/opti9xx/Makefile
 
