--- a/isa/wavefront/Makefile
+++ b/isa/wavefront/Makefile
@@ -3,6 +3,8 @@ TOPDIR = ../..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+isapnp-files = wavefront.isapnp
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/isa/wavefront/Makefile
 
