Create only static devices

--- a/snddevices.in
+++ b/snddevices.in
@@ -4,7 +4,6 @@ MAJOR=116
 OSSMAJOR=14
 MAX_CARDS=4
 PERM=666
-STATIC=0
 OWNER=root.root
 
 if [ "`grep -w -E "^audio" /etc/group`x" != x ]; then
@@ -129,7 +128,7 @@ if test $OSSMAJOR -eq 14; then
   ln -svf /dev/amidi0 /dev/amidi
 fi
 
-# New devices (obsolete now)...
+# Remove old devices
 
 mv -f /dev/sndstat /dev/1sndstat
 rm -f /dev/snd*
@@ -138,23 +137,17 @@ if [ -d /dev/snd ]; then
   rm -f /dev/snd/*
   rmdir /dev/snd
 fi
-if [ $STATIC -gt 0 ]; then
-  mkdir -p /dev/snd
-  create_devices  /dev/snd/control	0
-  create_device1  /dev/snd/seq		1
-  create_device1  /dev/snd/timer	33
-  create_devices2 /dev/snd/hw		4	4
-  create_devices2 /dev/snd/midi		8	8
-  create_devices3 /dev/snd/pcm		16	8	p
-  create_devices3 /dev/snd/pcm		24	8	c
-fi
 
-# New dynamic sound device filesystem
+# Create new ones
 
-if [ $STATIC -le 0 ]; then
-  echo "ALSA dynamic sound device filesystem"
-  ln -sfv /proc/asound/dev /dev/snd
-fi
+mkdir -p /dev/snd
+create_devices  /dev/snd/control	0
+create_device1  /dev/snd/seq		1
+create_device1  /dev/snd/timer		33
+create_devices2 /dev/snd/hw		4	4
+create_devices2 /dev/snd/midi		8	8
+create_devices3 /dev/snd/pcm		16	8	p
+create_devices3 /dev/snd/pcm		24	8	c
 
 # Loader devices
 
