--- a/utils/alsa-driver.spec.in
+++ b/utils/alsa-driver.spec.in
@@ -20,9 +20,9 @@ BuildRequires:	initscripts
 
 %changelog
 * Mon Mar  3 2003 Ronny V. Vindenes <sublett@dc-s.com>
-- change BuildRoot from /var/tmp to %{_tmppath}
-- use standard rpm macros for %build
-- simplify %install
+- change BuildRoot from /var/tmp to _tmppath
+- use standard rpm macros for build section
+- simplify install section
 - updated dependencies
 
 * Tue Nov 20 2001 Jaroslav Kysela <perex@suse.cz>
@@ -34,7 +34,7 @@ BuildRequires:	initscripts
 - SPEC file is now kernel independent - modules are compiled for kernel specified
   in $TARGET_KERNEL variable or for running kernel
 - dangerous command "rm -rf $RPM_BUILD_ROOT" checks $RPM_BUILD_ROOT variable
-- deleting service alsasound migrates from %postun into %preun script -
+- deleting service alsasound migrates from postun into preun script -
   after uninstalling chkconfig utility cannot found alsasound script
 
 
