removed the dependency of sscape to CONFIG_ISAPNP.

--- a/isa/Kconfig
+++ b/isa/Kconfig
@@ -7,7 +7,7 @@ config SND_MSND_PINNACLE
 
 config SND_SSCAPE
 	tristate "Ensoniq SoundScape PnP driver"
-	depends on SND && ISAPNP
+	depends on SND
 	help
 	  Say 'Y' or 'M' to include support for Ensoniq SoundScape PnP
 	  soundcard.
