--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ dnl Copyright (c) by Jaroslav Kysela <perex@suse.cz>
 
 AC_INIT(acore/sound.c)
 AC_PREFIX_DEFAULT(/usr)
-CONFIG_SND_VERSION="0.9.3a"
+CONFIG_SND_VERSION="0.9.3b"
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -150,6 +150,74 @@ AC_SUBST(ksublevel)
 AC_SUBST(kextraversion)
 AC_MSG_RESULT($kaversion)
 
+dnl Check for GCC version...
+AC_MSG_CHECKING(for GCC version)
+ac_save_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS -I$CONFIG_SND_KERNELDIR/include"
+AC_CACHE_VAL(kernel_gcc,
+[AC_TRY_RUN([
+#include <stdio.h>
+#include <ctype.h>
+#include "$CONFIG_SND_KERNELDIR/include/linux/compile.h"
+int main()
+{
+ FILE *f;
+ char compiler[128];
+ char *ptr, *dptr;
+#ifdef LINUX_COMPILER
+ f=fopen("./conftestdata","w");
+ if (f) {
+   for (ptr = LINUX_COMPILER, dptr = compiler; *ptr != '\0' && *ptr != ' ' && *ptr != '\t'; ptr++, dptr++)
+     *dptr = *ptr;
+   if (*ptr != '\0' && (*ptr == ' ' || *ptr == '\t'))
+     ptr++;
+   if (!strncmp(ptr, "version", 7))
+	ptr += 7;
+   if (*ptr != '\0' && (*ptr == ' ' || *ptr == '\t'))
+     ptr++;
+   *dptr++ = ' ';
+   for (; *ptr != '\0' && *ptr != '\n'; ptr++, dptr++)
+     *dptr = *ptr;
+   *dptr = '\t';
+   *dptr = '\0';
+   fprintf(f,"%s\n",compiler);
+   fclose(f);
+   }
+ exit(0);
+#else
+ exit(1);
+#endif
+}],kernel_compiler=`cat conftestdata`,
+kernel_compiler="",
+kernel_compiler="")])
+CFLAGS="$ac_save_CFLAGS"
+kernel_compiler_type=`echo $kernel_compiler | cut -d ' ' -f 1`
+kernel_compiler_version=`echo $kernel_compiler | cut -d ' ' -f 2`
+my_compiler=`$CC --version | head -1`
+my_compiler_type=`echo $my_compiler | cut -d ' ' -f 1`
+my_compiler_version=`echo $my_compiler | cut -d ' ' -f 3`
+if test -z "$my_compiler_version" ; then
+  my_compiler_version="$my_compiler_type"
+  my_compiler_type="gcc"
+fi
+AC_MSG_RESULT(Kernel compiler: $kernel_compiler Used compiler: $my_compiler);
+if test "$my_compiler_type" != "$kernel_compiler_type"; then
+  echo "Fatal error: Compiler type does not match"
+  exit 1
+fi
+if test "$my_compiler_type" = "gcc" ; then
+  kernel_major=`echo $kernel_compiler_version | cut -d '.' -f 1`
+  my_major=`echo $kernel_compiler_version | cut -d '.' -f 1`
+  if test $kernel_major -eq 2 -a $my_major -eq 3 ; then
+    echo "Fatal error: Kernel is compiled with GCC 2.x and you are trying to use GCC 3.x."
+    echo "             These two version of GCC are incompatible for binary code."
+  fi
+  if test $kernel_major -eq 3 -a $my_major -eq 2 ; then
+    echo "Fatal error: Kernel is compiled with GCC 3.x and you are trying to use GCC 2.x."
+    echo "             These two version of GCC are incompatible for binary code."
+  fi
+fi
+
 AC_DEFUN(CHECK_KERNEL_HEADER, [
   AC_MSG_CHECKING(for kernel $1)
   if test -f "$CONFIG_SND_KERNELDIR/include/$1"; then
@@ -169,7 +237,6 @@ AC_DEFUN(CHECK_KERNEL_HEADER, [
 ])
 
 dnl Check kernel configurations
-
 AC_DEFUN(CHECK_KERNEL_CONFIG, [
   boolvar=$1
   AC_MSG_CHECKING(for $2)
