moved vxpocket,vxp440 and vx222 drivers to alsa-kernel tree

--- a/pci/vx222/Makefile
+++ b/pci/vx222/Makefile
@@ -8,9 +8,6 @@ include $(TOPDIR)/Makefile.conf
 #
 
 TOPDIR = $(MAINSRCDIR)
-
-snd-vx222-objs := vx222.o vx222_ops.o
-
-obj-$(CONFIG_SND_VX222) += snd-vx222.o
+include $(TOPDIR)/alsa-kernel/pci/vx222/Makefile
 
 include $(TOPDIR)/Rules.make
