--- a/pcmcia/vx/Makefile
+++ b/pcmcia/vx/Makefile
@@ -8,11 +8,6 @@ include $(TOPDIR)/Makefile.conf
 #
 
 TOPDIR = $(MAINSRCDIR)
-
-snd-vxpocket-objs := vxpocket.o vx_entry.o vxp_ops.o vxp_mixer.o
-snd-vxp440-objs := vxpocket.o vx_entry.o vxp_ops.o vxp_mixer.o
-
-obj-$(CONFIG_SND_VXPOCKET) += snd-vxpocket.o
-obj-$(CONFIG_SND_VXP440) += snd-vxp440.o
+include $(TOPDIR)/alsa-kernel/pcmcia/vx/Makefile
 
 include $(TOPDIR)/Rules.make
