--- a/include/config.h.in
+++ b/include/config.h.in
@@ -4,17 +4,9 @@
 
 #include "config1.h"
 
+/* ALSA section */
 #undef CONFIG_SND_VERSION
-#undef CONFIG_SND_KERNELDIR
-#undef CONFIG_ISAPNP_KERNEL
-#undef CONFIG_PNP_KERNEL
-#undef CONFIG_ISAPNP
-#undef CONFIG_PNP
 #undef CONFIG_SND_ISA
-#undef CONFIG_OLD_KILL_FASYNC
-#undef CONFIG_HAVE_DMA_ADDR_T
-#undef CONFIG_HAVE_MUTEX_MACROS
-#undef CONFIG_HAVE_VMALLOC_TO_PAGE
 #undef CONFIG_SND_SEQUENCER
 #undef CONFIG_SND_OSSEMUL
 #undef CONFIG_SND_MIXER_OSS
@@ -28,3 +20,21 @@
 #undef CONFIG_SND_BIT32_EMUL_MODULE
 #undef CONFIG_SND_RTCTIMER_MODULE
 #undef CONFIG_SND_SEQ_DUMMY_MODULE
+
+/* build section */
+#undef CONFIG_SND_KERNELDIR
+#undef CONFIG_ISAPNP_KERNEL
+#undef CONFIG_PNP_KERNEL
+#undef CONFIG_ISAPNP
+#undef CONFIG_PNP
+
+/* 2.4 kernels */
+#undef CONFIG_HAVE_OLD_REQUEST_MODULE
+#undef CONFIG_HAVE_STRLCPY
+#undef CONFIG_HAVE_SNPRINTF
+#undef CONFIG_HAVE_VMALLOC_TO_PAGE
+
+/* 2.2 kernels */
+#undef CONFIG_OLD_KILL_FASYNC
+#undef CONFIG_HAVE_DMA_ADDR_T
+#undef CONFIG_HAVE_MUTEX_MACROS
