--- a/acore/Makefile
+++ b/acore/Makefile
@@ -3,6 +3,8 @@ TOPDIR = ..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+EXTRA_CLEAN = info.c pcm_native.c control.c hwdep.c init.c rawmidi.c sound.c timer.c
+
 obj-$(CONFIG_SND_SERIALMIDI) += snd-rawmidi.o snd.o
 obj-$(CONFIG_SND_MSND_PINNACLE) += snd-pcm.o snd-timer.o snd-page-alloc.o snd.o snd-rawmidi.o
 obj-$(CONFIG_SND_AZT3328) += snd-pcm.o snd-timer.o snd-page-alloc.o snd.o snd-rawmidi.o snd-hwdep.o
