--- a/configure.in
+++ b/configure.in
@@ -313,6 +313,10 @@ if test ! -f include/linux/workqueue.h; then
 fi
 CHECK_KERNEL_HEADER(asm/hw_irq.h)
 CHECK_AND_REPLACE_KERNEL_HEADER(linux/jiffies.h, linux/sched.h)
+dnl PPC headers (for 2.2 kernels)
+CHECK_AND_REPLACE_KERNEL_HEADER(linux/adb.h, asm/adb.h)
+CHECK_AND_REPLACE_KERNEL_HEADER(linux/cuda.h, asm/cuda.h)
+CHECK_AND_REPLACE_KERNEL_HEADER(linux/pmu.h, asm/pmu.h)
 
 dnl Check for modversions...
 CHECK_KERNEL_CONFIG(CONFIG_MODVERSIONS, [kernel module symbol versions])
